feat: create band update request function
